--- a/playbooks/nginx/templates/nginx.conf.j2
+++ b/playbooks/nginx/templates/nginx.conf.j2
@@ -1,7 +1,19 @@
 # vim:ft=conf
 server {
     listen 80;
+    listen [::]:80;
+    listen 443 ssl;
+    listen [::]:443 ssl;
     server_name {{ domain_name }}; # Change this to your domain
+
+    # RSA certificate
+    ssl_certificate /etc/letsencrypt/live/{{ domain_name }}/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/{{ domain_name }}/privkey.pem; # managed by Certbot
+    
+    # Redirect non-https traffic to https
+    if ($scheme != "https") {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
 
     location / {
         proxy_pass http://localhost:3000; # The node app
@@ -9,6 +21,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_cache_bypass $http_upgrade;
     }
 
