--- a/playbooks/nginx/templates/nginx.conf.j2
+++ b/playbooks/nginx/templates/nginx.conf.j2
@@ -1,34 +1,38 @@
 # vim:ft=conf
 server {
-    listen 80;
-    listen [::]:80;
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    server_name {{ domain_name }}; # Change this to your domain
+  listen 80;
+  listen [::]:80;
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+  server_name {{ domain_name }}; # Change this to your domain
 
-    # RSA certificate
-    ssl_certificate /etc/letsencrypt/live/{{ domain_name }}/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/{{ domain_name }}/privkey.pem; # managed by Certbot
-    
-    # Redirect non-https traffic to https
-    if ($scheme != "https") {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
+# RSA certificate
+  ssl_certificate /etc/letsencrypt/live/{{ domain_name }}/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/{{ domain_name }}/privkey.pem; # managed by Certbot
 
-    location / {
-        proxy_pass http://localhost:3000; # The node app
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_cache_bypass $http_upgrade;
-    }
+  root /var/www/app/build/client/;
 
-    # Serve static files directly from Nginx for better performance
-    location /static {
-        alias /usr/local/app/build/static; # Update this path
-        expires 30d;
-        access_log off;
-    }
+# Redirect non-https traffic to https
+  if ($scheme != "https") {
+    return 301 https://$host$request_uri;
+  } # managed by Certbot
+
+# Serve static files directly from Nginx for better performance
+  location / {
+    try_files $uri @node;
+  }
+
+  location @node {
+    proxy_pass http://localhost:3000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_cookie_domain localhost .app.example.com;
+
+    # Following is for Websocket support
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_cache_bypass $http_upgrade;
+  }
 }
